[package]
name = "framestream"
version = "0.1.1"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Frame Streams implementation in Rust"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-framestream"
repository = "https://github.com/jedisct1/rust-framestream"

[dependencies]
byteorder = "~1.0"
bytes = { git="https://github.com/carllerche/bytes" }
clippy = {version = "*", optional = true}

[profile.release]
lto = true
panic = "abort"
opt-level = 3
