[package]
name = "framestream"
version = "0.1.2"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Frame Streams implementation in Rust"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-framestream"
repository = "https://github.com/jedisct1/rust-framestream"

[dependencies]
clippy = {version = "~0", optional = true}
byteorder = "^1.0.0"
bytes = "^0.4.1"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
