[package]
name = "framestream"
version = "0.1.4"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Frame Streams implementation in Rust"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-framestream"
repository = "https://github.com/jedisct1/rust-framestream"
edition = "2018"

[dependencies]
byteorder = "1.3"
bytes = "0.5"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
